--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "date-fns": "^3.5.0",
+    "express": "^4.19.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
